syntax = "proto3";
package protocol;

option go_package = "protocol";

import "google/api/annotations.proto";

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {
      option (google.api.http).get = "/api/v1/sayhello";
  }

  rpc Version (Empty) returns (VersionResponse) {
      option (google.api.http).get = "/api/v1/version";
  }
}

message Empty {
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}

// The response message contains the version
message VersionResponse {
    string version = 1;
}